--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: relative;
+  margin: 0 auto;
+  margin-top: 5vh;
+  
+  width : 70vw;
+  height: 90vh;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.Container{
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Left_Box {
+  box-sizing: border-box;
+  padding-left: 6rem;
+  padding-right: 6rem;
+  padding-top: 2rem;
+  width: 50%;
+  
+  
+  background: linear-gradient(to left bottom, #FCC832, #F49A1C)
 }
+
+.Text_Container {
+  margin-top: 11rem;
+}
+
+.Right_Box {
+  position: relative;
+  box-sizing: border-box;
+  padding-right: 8rem;
+  padding-top: 2rem;
+  width:50%;
+  background: linear-gradient(to left bottom, #3D85D5, #1B4EB7)
+}
+.Sign_Up {
+  margin-top: 7rem;
+}
+
+
+
+
